--- a/.dev.env
+++ b/.dev.env
@@ -1,8 +1,8 @@
 DEBUG=False
 
-DB_DATABASE=warhammer_db
+DB_DATABASE=db_pl
 DB_USERNAME=root
 DB_PASSWORD=Ally0urbas3-35
 
-POSTGRES_HOST=db-warhammer
+POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
