--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 services:
 
   db-pl:
-    image: postgres:15
+    image: postgres:14
     restart: on-failure
     volumes:
       - ./database:/var/lib/postgresql/data
@@ -12,6 +12,8 @@ services:
       POSTGRES_DB: ${DB_DATABASE}
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
+    env_file:
+      - .env
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready" ]
       interval: 5s
